platform/storage/garage/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: garage-s3
  namespace: storage
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`s3.mso.lol`) || HostRegexp(`^[a-z0-9.-]+\.s3\.mso.lol$`)
      kind: Rule
      middlewares:
        - name: chain-basic
          namespace: traefik
      services:
        - name: garage
          port: 3900
  tls:
    certResolver: cloudflare
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: garage-webui
  namespace: storage
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`storage-ui.mso.lol`) || Host(`s3-ui.mso.lol`)
      kind: Rule
      middlewares:
        - name: chain-auth
          namespace: traefik
      services:
        - name: garage-webui
          port: 3909
  tls:
    certResolver: cloudflare
